@@ -179,6 +179,8 @@ CHANGE LOG
 
 Changes up to 0.92
 
+   * much faster loading of multi-model PDB trajectories
+
    * get_symmetry & set_symmetry commands for molecule objects
 
    * mutagenesis wizard now preserves cartoon information
